--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head><link rel="stylesheet" href="style.css"></head>
   <body>
-    <h1>Agenda Web</h1>
-    <script src="script.js"></script>
+	    <h1>Agenda Web</h1>
+    <!-- Afegit per Marianela Marin Mazaira -->
+
+	<script src="script.js"></script>
   </body>
 </html>
