Resolució de conflicte entre main i peu_pagina

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!-- index.html -->
 <html>
   <head><link rel="stylesheet" href="style.css"></head>
+  <footer>© 2025 Peu de pàgina</footer>
   <body>
-<<<<<<< HEAD
+
 	    <h1>Agenda Web</h1>
     <!-- Afegit per Marianela Marin Mazaira -->
 
 	<script src="script.js"></script>
-=======
+
     <h1>Agenda Web</h1>
     <script src="script.js"></script>
 	<form id="contact-form">
@@ -15,6 +16,6 @@
   	<button type="submit">Afegir contacte</button>
 	</form>
 
->>>>>>> f91939f (Afegit formulari per afegir contactes)
+
   </body>
 </html>
