Canviat style.css per style2.css i afegit footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- index.html -->
 <html>
-  <head><link rel="stylesheet" href="style.css"></head>
+  <head><link rel="stylesheet" href="style2.css"></head>
   <footer>© 2025 Peu de pàgina</footer>
   <body>
 
