Canviat style.css per style1.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- index.html -->
 <html>
-  <head><link rel="stylesheet" href="style.css"></head>
+  <head><link rel="stylesheet" href="style1.css"></head>
   <body>
     <h1>Agenda Web</h1>
     <!-- Afegit per Marianela Marin Mazaira -->
